deploy/k8s/wissen-frontend/wissen-frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: wissen-frontend-service
spec:
  type: NodePort
  selector:
    app: wissen-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
